ver 0.9.9 (2009-11-23) 1. 调整：多语言内核合并成一个发布包，同时提供：简体、繁体和英文，并对内核进行了针对性修改 2. 添加：工具栏改为自动换行模式，添加工具栏强制换行命令：BtnBr，并对相关的样式和脚本进行了针对性修改 3. 调整：自带Ajax上传开始后弹出假上传进度窗口，防止用户意外关闭上传前操作界面导致上传失败 4. 添加：增加缩进为Tab快捷键，减少缩进为Shift+Tab快捷键 5. 修正：编辑内容区在预览状态下点击链接，会导致当前编辑区域失效，现更改为默认打开新窗口(_target) 6. 修正：演示用upload.php增加扩展名限制，以增加文件上传的安全性 7. 添加：UBB模式增加[code]的完美支持，保证[code][/code]区域里的内容不做任何修改 8. 修正：图片属性界面中的水平间距和垂直间距反了，在此重新更正 9. 添加：在settings中添加baseUrl参数，应用在需要相对路径的编辑环境中：编辑页面和图片文件不在同一个基础路径下，但是又需要图片等附件保存为相对路径 10.修正：Firefox下切换到源代码再切换回来，会导致无法用删除键和后退键问题的修正 11.调整：showModal函数由原先的单一iframe上传功能，现分离成两个独立函数：showIframeModal和showModal，前者调用内嵌iframe的模式窗口，后者显示普通的模式窗口，都可供插件调用 12.添加：添加getSelect函数，返回编辑器窗口中选中内容的HTML代码或者文本，唯一参数设置为'text'即是返回文本 13.添加：添加link链接的附件模式，不选择任何内容的情况下添加链接为添加附件，附件链接的文字可设置参数attachLinkText 14.修正：强制P标签功能的进一步完善，非P标签模式下，按回车键全部输出换行 15.添加：添加toggleShowBlocktag接口，以方便某些需要添加“显示或者隐藏块标签”按钮的开发者调用 16.修正：formatXHTML兼容性进一步提高，处理某些非标准HTML代码，导致部分内容丢失问题的修正 17.添加：系统自带的Ajax上传和iframe式上传增加“立即添加模式”，只需在返回的参数最前面加感叹号“!”，在上传完成后图片或者链接等内容即自动加入到编辑器内容中 18.修正：系统自带Ajax上传功能在Opera上传失败问题的修正

--- a/xheditor_skin/default/ui.css
+++ b/xheditor_skin/default/ui.css
@@ -1,11 +1,13 @@
 .xhEdt_default table, .xhEdt_default tr, .xhEdt_default td, .xhEdt_default iframe {border:0; margin:0; padding:0; background:transparent; white-space:nowrap; text-decoration:none; font-weight:normal; color:#000}
 
 .xhEdt_default table.xhEdtLayout {display:inline-table;background:#F0F0EE; border:1px solid #C5C5C5;width:100%;height:100%;}
-.xhEdt_default td.xhEdtTool {background:url(img/toolsbg.gif);border-bottom:1px solid #C5C5C5;padding:2px;}
+.xhEdt_default td.xhEdtTool{padding:0px 3px;border-bottom:1px solid #C5C5C5;}
+.xhEdt_default td.xhEdtTool span{float:left;margin:2px 0px;}
+.xhEdt_default td.xhEdtTool br{clear:left;}
 
-.xhEdt_o2007blue span.xhEdtGStart{display:none;}
-.xhEdt_o2007blue span.xhEdtGEnd{display:none;}
-.xhEdt_default span.xhEdtSeparator {display:block;height:20px;width:4px;background:url(img/icons.gif) no-repeat -580px 0;margin:0 2px}
+.xhEdt_default span.xhEdtGStart{display:none;}
+.xhEdt_default span.xhEdtGEnd{display:none;}
+.xhEdt_default span.xhEdtSeparator{display:block;height:22px;width:4px;margin:2px 2px !important;background:url(img/icons.gif) no-repeat -580px 0;}
 
 .xhEdt_default a.xhEdtButton{display:block;margin:1px;border:0px; width:20px; height:20px;}
 .xhEdt_default a.xhEdtButton span{opacity:0.3; -ms-filter:'alpha(opacity=30)'; filter:alpha(opacity=30);}
@@ -13,7 +15,7 @@
 .xhEdt_default a.xhEdtEnabled:hover {margin:0px;border:1px solid #999; background:#fff;}
 .xhEdt_default a.xhEdtActive{margin:0px;border:1px solid #999; background:#fff;}
 
-.xhEdt_default a.xhEdtButton span{display:block;height:20px;width:20px;}
+.xhEdt_default a.xhEdtButton span{display:block;margin:0px;height:20px;width:20px;}
 .xhEdt_default span.xhEdtIcon{background:url(img/icons.gif) no-repeat 20px 20px}
 
 .xhEdt_default span.xhEdtBtnCut {background-position:0 0}
@@ -54,7 +56,7 @@
 .xhEdt_default iframe {display:block;background:#fff;width:100%;height:100%;}
 
 .xhEdt_Fullfix{overflow:hidden;}
-.xhEdt_Fullfix body{overflow:hidden;margin:0px;padding:0px;width:100%;height:100%;}
+.xhEdt_Fullfix body{overflow:hidden;width:100%;height:100%;}
 .xhEdt_Fullscreen{top:0px;left:0px;position:fixed;z-index:999999;width:100%;height:100%;background:#fff;}
 * html .xhEdt_Fullscreen{position: absolute;_top:expression((document.compatMode?documentElement.scrollTop:document.body.scrollTop)+'px');height: expression((document.compatMode?documentElement.offsetHeight:document.body.offsetHeight) + 'px');}
 
@@ -76,16 +78,16 @@
 .xhEdtColor a:hover{border:#000 1px solid;}
 .xhEdtColor a img{display:none;}
 
-.xhEdtDialog{padding:10px;font-size:12px;}
+.xhEdtDialog{padding:10px;font-size:12px;font-family: Simsun;}
 .xhEdtDialog a{text-decoration:underline;color:#00f;}
 .xhEdtDialog a:hover{text-decoration:underline;color:#00f}
 .xhEdtDialog div{padding:2px 0px;}
-.xhEdtDialog input[type=text]{width:150px;height:16px;font-size:12px;border:1px #ABADB3 solid;}
-.xhEdtDialog input[type=button]{width:40px;border-width:1px;background:#F0F0F0;cursor:pointer;}
-.xhEdtDialog .upload{position: relative;display:inline-block;width:152px;}
+.xhEdtDialog input[type=text]{width:160px;height:16px;font-size:12px;border:1px #ABADB3 solid;}
+.xhEdtDialog input[type=button]{margin:0;border-width:1px;background:#F0F0F0;cursor:pointer;}
+.xhEdtDialog .upload{position: relative;display:inline-block;width:162px;}
 .xhEdtDialog .upload .text {position: absolute;width:107px;top: 0px;left: 0px;z-index: 3;}
-.xhEdtDialog .upload .btn{position: absolute;top: 0px;left: 112px;width:40px;z-index: 1;}
-.xhEdtDialog .upload .file {cursor:pointer;position: absolute;top: 0px;left: 0px;width:152px;opacity:0;-ms-filter:'alpha(opacity=0)';filter:alpha(opacity=0);z-index: 2;}
+.xhEdtDialog .upload .btn{position: absolute;top: 0px;left: 112px;width:50px;z-index: 1;padding:0;}
+.xhEdtDialog .upload .file {cursor:pointer;position: absolute;top: 0px;left: 0px;width:162px;opacity:0;-ms-filter:'alpha(opacity=0)';filter:alpha(opacity=0);z-index: 2;}
 
 .xhEdtUploadIO{position:absolute;top:-1000px;left:-1000px;}
 .xhEdtUploadForm{position:absolute;top:-1200px;left:-1200px;}
@@ -101,6 +103,6 @@ height: expression(document.body.scrollHeight > document.body.offsetHeight ? doc
 position: absolute;
 margin-top: expression(0 - parseInt(this.offsetHeight / 2) + (TBWindowMargin = document.documentElement && document.documentElement.scrollTop || document.body.scrollTop) + 'px');
 }
-.xhEdtTitle{padding:5px;background:url(img/toolsbg.gif);border-bottom:1px solid #bbb;}
+.xhEdtTitle{padding:5px;background:#F0F0EE;border-bottom:1px solid #bbb;}
 .xhEdtClose{float:right;display:block;width:16px;height:16px;background:url(img/close.gif);cursor:pointer;}
 .xhEdtContent{padding:5px;}
