--- a/xheditor_skin/o2007silver/ui.css
+++ b/xheditor_skin/o2007silver/ui.css
@@ -1,19 +1,21 @@
 .xhEdt_o2007silver table, .xhEdt_o2007silver tr, .xhEdt_o2007silver td, .xhEdt_o2007silver iframe {border:0; margin:0; padding:0; background:transparent; white-space:nowrap; text-decoration:none; font-weight:normal; color:#000}
 
 .xhEdt_o2007silver table.xhEdtLayout {display:inline-table;background:#EEEEEE; border:1px solid #BBBBBB;width:100%;height:100%;}
-.xhEdt_o2007silver td.xhEdtTool {border-bottom:1px solid #BBBBBB;padding:2px;}
+.xhEdt_o2007silver td.xhEdtTool {padding:1px 3px;border-bottom:1px solid #BBBBBB;}
+.xhEdt_o2007silver td.xhEdtTool span{float:left;margin:2px 0px;}
+.xhEdt_o2007silver td.xhEdtTool br{clear:left;}
 
-.xhEdt_o2007silver span.xhEdtGStart{display:block;margin-left:2px;background:url(img/buttonbg.png) -22px 0;width:1px; height:22px;}
-.xhEdt_o2007silver span.xhEdtGEnd{display:block;background:url(img/buttonbg.png) -22px 0;width:1px; height:22px;}
-.xhEdt_o2007silver span.xhEdtSeparator {display:block;height:20px;width:4px;margin:0 2px}
+.xhEdt_o2007silver span.xhEdtGStart{display:block;width:1px;height:22px;background:url(img/buttonbg.png) -22px 0;}
+.xhEdt_o2007silver span.xhEdtGEnd{display:block;width:1px;height:22px;background:url(img/buttonbg.png) -22px 0;}
+.xhEdt_o2007silver span.xhEdtSeparator{display:block;height:22px;width:4px;padding:0 2px}
 
-.xhEdt_o2007silver a.xhEdtButton{display:block;margin:1px 0px;padding:1px;border:0px;background:url(img/buttonbg.png);width:20px; height:20px;}
+.xhEdt_o2007silver a.xhEdtButton{display:block;padding:1px;width:20px;height:20px;border:0px;background:url(img/buttonbg.png);}
 .xhEdt_o2007silver a.xhEdtButton span{opacity:0.3; -ms-filter:'alpha(opacity=30)'; filter:alpha(opacity=30);}
-.xhEdt_o2007silver a.xhEdtEnabled span{opacity:1; -ms-filter:'alpha(opacity=100)'; filter:alpha(opacity=100);}
+.xhEdt_o2007silver a.xhEdtEnabled span{opacity:1; -ms-filter:'alpha(opacity=100)'; filter:alpha(opacity=100)}
 .xhEdt_o2007silver a.xhEdtEnabled:hover {background-color:#B2BBD0; background-position:0 -22px}
 .xhEdt_o2007silver a.xhEdtActive{background-color:#B2BBD0; background-position:0 -22px}
 
-.xhEdt_o2007silver a.xhEdtButton span{display:block;height:20px;width:20px;}
+.xhEdt_o2007silver a.xhEdtButton span{display:block;margin:0px;height:20px;width:20px;}
 .xhEdt_o2007silver span.xhEdtIcon{background:url(img/icons.gif) no-repeat 20px 20px}
 
 .xhEdt_o2007silver span.xhEdtBtnCut {background-position:0 0}
@@ -54,7 +56,7 @@
 .xhEdt_o2007silver iframe {display:block;background:#fff;width:100%;height:100%;}
 
 .xhEdt_Fullfix{overflow:hidden;}
-.xhEdt_Fullfix body{margin:0px;padding:0px;width:100%;height:100%;}
+.xhEdt_Fullfix body{overflow:hidden;width:100%;height:100%;}
 .xhEdt_Fullscreen{top:0px;left:0px;position:fixed;z-index:999999;width:100%;height:100%;background:#fff;}
 * html .xhEdt_Fullscreen{position: absolute;_top:expression((document.compatMode?documentElement.scrollTop:document.body.scrollTop)+'px');height: expression((document.compatMode?documentElement.offsetHeight:document.body.offsetHeight) + 'px');}
 
@@ -76,16 +78,16 @@
 .xhEdtColor a:hover{border:#000 1px solid;}
 .xhEdtColor a img{display:none;}
 
-.xhEdtDialog{padding:10px;font-size:12px;}
+.xhEdtDialog{padding:10px;font-size:12px;font-family: Simsun;}
 .xhEdtDialog a{text-decoration:underline;color:#00f;}
 .xhEdtDialog a:hover{text-decoration:underline;color:#00f}
 .xhEdtDialog div{padding:2px 0px;}
-.xhEdtDialog input[type=text]{width:150px;height:16px;font-size:12px;border:1px #ABADB3 solid;}
-.xhEdtDialog input[type=button]{width:40px;border-width:1px;background:#F0F0F0;cursor:pointer;}
-.xhEdtDialog .upload{position: relative;display:inline-block;width:152px;}
+.xhEdtDialog input[type=text]{width:160px;height:16px;font-size:12px;border:1px #ABADB3 solid;}
+.xhEdtDialog input[type=button]{margin:0;width:40px;border-width:1px;background:#F0F0F0;cursor:pointer;}
+.xhEdtDialog .upload{position: relative;display:inline-block;width:162px;}
 .xhEdtDialog .upload .text {position: absolute;width:107px;top: 0px;left: 0px;z-index: 3;}
-.xhEdtDialog .upload .btn{position: absolute;top: 0px;left: 112px;width:40px;z-index: 1;}
-.xhEdtDialog .upload .file {cursor:pointer;position: absolute;top: 0px;left: 0px;width:152px;opacity:0;-ms-filter:'alpha(opacity=0)';filter:alpha(opacity=0);z-index: 2;}
+.xhEdtDialog .upload .btn{position: absolute;top: 0px;left: 112px;width:50px;z-index: 1;padding:0;}
+.xhEdtDialog .upload .file {cursor:pointer;position: absolute;top: 0px;left: 0px;width:162px;opacity:0;-ms-filter:'alpha(opacity=0)';filter:alpha(opacity=0);z-index: 2;}
 
 .xhEdtUploadIO{position:absolute;top:-1000px;left:-1000px;}
 .xhEdtUploadForm{position:absolute;top:-1200px;left:-1200px;}
