ver 1.0.0 rc1 (2010-3-1) 1. 添加：demo7 UBB演示结合syntaxhighlighter添加代码高亮示例 2. 添加：之前上传接口的msg变量仅能是字符串，现在可使用数组，但是必需保证数组中有一个变量名：url，其它变量可以任意添加，例：{err:'',msg:{url:'test.txt',id:'1'}} 3. 添加：鼠标点击事件传递到textarea中，方便某些特殊应用监控鼠标事件 4. 添加：超链接模块添加批量插入功能，返回链接地址可以为如下方式：test1.html,test1|test2.html,test2，逗号前面为链接url，后面部分为链接文本，多个链接之间用|分隔 5. 添加：demo10添加超链接模块的批量上传功能演示 6. 添加：Flash动画和多媒体文件两个模块在上传接口上添加宽度和高度参数，例：test.swf,100,200，分别代表：url、宽度和高度
1. 修正：在file://这样的本地环境下，IE等少数几个浏览器工作不正常问题的修正
2. 修正：在编辑器前一个表单项目按tab键，无法直接跳入编辑器区域问题的修正
3. 修正：Firefox等少数浏览器在空内容情况下自动添加<br />问题的修正
4. 修正：Firefox等浏览器在可视化编辑状态下无法强制换行问题的修正
5. 修正：IE7浏览器下模式窗口无法居中问题的修正
6. 修正：处理<font size="8">test</font>这样不规则HTML代码，会产生错误问题的修正
7. 修正：IE6,IE7无法编辑Flash和多媒体问题的修正

1. 调整：JS互动接口对象返回方式变更为：editor=$('#elm1').xheditor(true);，若同时对多个对象初始化，则返回所有成功对象的数组
2. 调整：添加的插件默认插入在full按钮组的Table表格后面，原先必需自己手工调用
3. 调整：jQuery更换为v1.4.2版本
4. 调整：繁体版xhEditor内核中的某些文字修改为更加本地化用词
5. 调整：textarea隐藏情况下，无法获得高度，造成编辑器0高度问题，现强制禁用并提醒开发者必需显示后再初始化
6. 调整：切换成源代码时格式化XHTML的输出格式进行了适当调整
7. 调整：为了和showModal接口保持一致，showIframeModal接口的title和ifmurl两个参数进行了顺序调换

--- a/xheditor_skin/o2007silver/ui.css
+++ b/xheditor_skin/o2007silver/ui.css
@@ -87,38 +87,37 @@
 .xheDialog div{padding:2px 0px;}
 .xheDialog input{
 	border-width:1px;
-	/*IE6*/
-	_width:expression((type=="text")?'160px':'auto');_height:expression((type=="text")?'16px':'auto');_border:expression((type=="text")?'1px #ABADB3 solid':'auto');_background:expression((type=="button")?'#F0F0F0':'#FFFFFF');_cursor:expression((type=="button")?'pointer':'');
+	*width:expression((type=="text")?'160px':'auto');*height:expression((type=="text")?'16px':'auto');*border:expression((type=="text")?'1px #ABADB3 solid':'auto');*background:expression((type=="button")?'#F0F0F0':'#FFFFFF');*cursor:expression((type=="button")?'pointer':'');
 }
 .xheDialog input[type=text]{width:160px;height:16px;font-size:12px;border:1px #ABADB3 solid;}
 .xheDialog input[type=button]{margin:0;width:40px;background:#F0F0F0;cursor:pointer;}
 .xheDialog select{border:1px #ABADB3 solid;}
 .xheDialog .xheUpload{position: relative;display:inline-block;width:162px;}
-.xheDialog .xheUpload .xheText {position: absolute;width:107px;top: 0px;left: 0px;z-index: 3;}
-.xheDialog .xheUpload .xheBtn{position: absolute;top: 0px;left: 112px;width:50px;z-index: 1;padding:0;}
-.xheDialog .xheUpload .xheFile {cursor:pointer;position: absolute;top: 0px;left: 0px;width:162px;opacity:0;-ms-filter:'alpha(opacity=0)';filter:alpha(opacity=0);z-index: 2;}
+.xheDialog .xheUpload .xheBtn{position: absolute;top: 0px;left: 112px;width:50px;z-index: 1000001;padding:0;}
+.xheDialog .xheUpload .xheFile {cursor:pointer;position: absolute;top: 0px;left: 0px;width:162px;opacity:0;-ms-filter:'alpha(opacity=0)';filter:alpha(opacity=0);z-index: 1000002;}
+.xheDialog .xheUpload .xheText {position: absolute;width:107px;top: 0px;left: 0px;z-index: 1000003;}
 
 .xheModal{
-	position: fixed;z-index: 99999999;text-align:left;top:50%;left:50%;background:#FFF;border:1px solid #AAA;font-size:12px;
-	_position: absolute;_margin-top: expression(0 - parseInt(this.offsetHeight / 2) + (TBWindowMargin = document.documentElement && document.documentElement.scrollTop || document.body.scrollTop) + 'px');
+	position: fixed;z-index: 1000010;text-align:left;top:50%;left:50%;background:#FFF;border:1px solid #AAA;font-size:12px;
+	*position:absolute;*margin-top:expression(0 - parseInt(this.offsetHeight / 2) + (TBWindowMargin = document.documentElement && document.documentElement.scrollTop || document.body.scrollTop) + 'px');
 }
 .xheModalTitle{padding:5px;background:#DDD;border-bottom:1px solid #AAA;}
 .xheModalClose{float:right;width:16px;height:16px;background:url(img/close.gif);cursor:pointer;}
 .xheModalIfmWait{width:100%;height:100%;background:url(img/waiting.gif) no-repeat 50% 50%;margin:-16 0 0 -16;}
 .xheModalShadow{
-	position:fixed;z-index:9999998;top:50%;left:50%;background:#000;opacity:0.2; -ms-filter:'alpha(opacity=20)'; filter:alpha(opacity=20);
-	_position: absolute;_margin-top: expression(0 - parseInt(this.offsetHeight / 2) + (TBWindowMargin = document.documentElement && document.documentElement.scrollTop || document.body.scrollTop) + 5 + 'px');
+	position:fixed;z-index:1000009;top:50%;left:50%;background:#000;opacity:0.2; -ms-filter:'alpha(opacity=20)'; filter:alpha(opacity=20);
+	*position:absolute;*margin-top:expression(0 - parseInt(this.offsetHeight / 2) + (TBWindowMargin = document.documentElement && document.documentElement.scrollTop || document.body.scrollTop) + 5 + 'px');
 }
 .xheModalOverlay{
-	position: fixed;z-index:9999999;top: 0px;left: 0px;height:100%;width:100%;background-color:#000;opacity:0.2; -ms-filter:'alpha(opacity=20)'; filter:alpha(opacity=20);
-	_position: absolute;_height: expression(Math.max(document.documentElement.clientHeight,document.documentElement.scrollHeight)+'px');_width: expression(Math.max(document.documentElement.clientWidth,document.documentElement.scrollWidth)+'px');
+	position: fixed;z-index:1000008;top: 0px;left: 0px;height:100%;width:100%;background-color:#000;opacity:0.2; -ms-filter:'alpha(opacity=20)'; filter:alpha(opacity=20);
+	*position:absolute;*height:expression(Math.max(document.documentElement.clientHeight,document.documentElement.scrollHeight)+'px');*width:expression(Math.max(document.documentElement.clientWidth,document.documentElement.scrollWidth)+'px');
 }
 
 .xhe_Fullfix{overflow:hidden;}
 .xhe_Fullfix body{overflow:hidden;width:100%;height:100%;}
 .xhe_Fullscreen{
-	top:0px;left:0px;position:fixed;z-index:99999;width:100%;height:100%;background:#fff;
-	_position: absolute;_top:expression((document.compatMode?documentElement.scrollTop:document.body.scrollTop)+'px');_width: expression((document.compatMode?documentElement.offsetWidth:document.body.offsetWidth) + 'px');_height: expression((document.compatMode?documentElement.offsetHeight:document.body.offsetHeight) + 'px');
+	top:0px;left:0px;position:fixed;z-index:100000;width:100%;height:100%;background:#fff;
+	*position:absolute;*top:expression((document.compatMode?documentElement.scrollTop:document.body.scrollTop)+'px');*width:expression((document.compatMode?documentElement.offsetWidth:document.body.offsetWidth) + 'px');*height: expression((document.compatMode?documentElement.offsetHeight:document.body.offsetHeight) + 'px');
 }
 
 .xheHideArea{position:absolute;top:-1000px;left:-1000px;visibility:hidden;}
