--- a/xheditor_skin/o2007blue/ui.css
+++ b/xheditor_skin/o2007blue/ui.css
@@ -61,7 +61,7 @@
 .xheFixCancel{position:absolute;z-index:999998;background-color:#FFF;opacity:0; -ms-filter:'alpha(opacity=0)'; filter:alpha(opacity=0);}
 
 .xheMenu{padding:2px;overflow-x:hidden;overflow-y:auto;max-height:230px;}
-.xheMenu a{display:block;padding:3px 20px 3px 3px;font-size:12px;color:#000;text-decoration:none;white-space:nowrap;}
+.xheMenu a{display:block;padding:3px 20px 3px 3px;line-height:normal;font-size:12px;color:#000;text-decoration:none;white-space:nowrap;}
 .xheMenu a:hover{background:#e5e5e5;text-decoration:none;color:#000;}
 .xheMenu p,.xheMenu h1,.xheMenu h2,.xheMenu h3,.xheMenu h4,.xheMenu h5,.xheMenu h6,.xheMenu pre,.xheMenu address,.xheMenu div{margin:0}
 
@@ -77,7 +77,7 @@
 .xheEmot li.cur a:hover{text-decoration:none;}
 
 .xheColor{padding:5px;}
-.xheColor a{display:inline-block;margin:1px;border:#999 1px solid;width:17px;height:9px;}
+.xheColor a{display:inline-block;margin:1px;border:#999 1px solid;width:17px;height:9px;font-size:0;}
 .xheColor a:hover{border:#000 1px solid;}
 .xheColor a img{display:none;}
 
@@ -86,15 +86,16 @@
 .xheDialog a:hover{text-decoration:underline;color:#00f}
 .xheDialog div{padding:2px 0px;}
 .xheDialog input{
-	border-width:1px;
-	*width:expression((type=="text")?'160px':'auto');*height:expression((type=="text")?'16px':'auto');*border:expression((type=="text")?'1px #ABADB3 solid':'auto');*background:expression((type=="button")?'#F0F0F0':'#FFFFFF');*cursor:expression((type=="button")?'pointer':'');
+	border-width:1px;border-style:solid;font-size:12px;
+	*padding:expression((type=="text")?'1px':'auto');*width:expression((type=="text")?'160px':'auto');*border-color:expression((type=="text")?'#ABADB3':'#fff #888 #888 #fff');*background:expression((type=="button")?'#F0F0F0':'#FFFFFF');*cursor:expression((type=="button")?'pointer':'');*font-size:expression((type=="button")?'13px':'12px');
 }
-.xheDialog input[type=text]{width:160px;height:16px;font-size:12px;border:1px #ABADB3 solid;}
-.xheDialog input[type=button]{margin:0;width:40px;background:#F0F0F0;cursor:pointer;}
+.xheDialog input[type=text]{padding:1px;width:160px;border-color:#ABADB3;}
+.xheDialog input[type=button]{margin:0;border-color:#fff #888 #888 #fff;background:#F0F0F0;cursor:pointer;font-size:13px;}
+.xheDialog input[type=file]{font-size:13px;}
 .xheDialog select{border:1px #ABADB3 solid;}
-.xheDialog .xheUpload{position: relative;display:inline-block;width:162px;}
-.xheDialog .xheUpload .xheBtn{position: absolute;top: 0px;left: 112px;width:50px;z-index: 1000001;padding:0;}
-.xheDialog .xheUpload .xheFile {cursor:pointer;position: absolute;top: 0px;left: 0px;width:162px;opacity:0;-ms-filter:'alpha(opacity=0)';filter:alpha(opacity=0);z-index: 1000002;}
+.xheDialog .xheUpload{position: relative;display:inline-block;width:164px;}
+.xheDialog .xheUpload .xheBtn{position: absolute;top: 0px;left: 114px;width:50px;z-index: 1000001;padding:0;}
+.xheDialog .xheUpload .xheFile{cursor:pointer;position: absolute;top: 0px;left: 0px;width:164px;opacity:0;-ms-filter:'alpha(opacity=0)';filter:alpha(opacity=0);z-index: 1000002;}
 .xheDialog .xheUpload .xheText {position: absolute;width:107px;top: 0px;left: 0px;z-index: 1000003;}
 
 .xheModal{
@@ -114,7 +115,7 @@
 }
 
 .xhe_Fullfix{overflow:hidden;}
-.xhe_Fullfix body{overflow:hidden;width:100%;height:100%;}
+.xhe_Fullfix body{width:100%;height:100%;}
 .xhe_Fullscreen{
 	top:0px;left:0px;position:fixed;z-index:100000;width:100%;height:100%;background:#fff;
 	*position:absolute;_top:expression((document.compatMode?documentElement.scrollTop:document.body.scrollTop)+'px');*width:expression((document.compatMode?documentElement.offsetWidth:document.body.offsetWidth) + 'px');*height:expression((document.compatMode?documentElement.offsetHeight:document.body.offsetHeight) + 'px');
