ver 1.0.0 RC3 (2010-5-5) 1. 添加：添加HTML5上传支持：多文件选择上传、真实上传进度显示以及从电脑中直接拖放文件上传，注：相应功能需要浏览器支持 2. 添加：添加upMultiple参数，控制是否允许多文件选择上传，默认为开启，此功能需要浏览器支持HTML5上传 3. 添加：添加全选SelectAll和打印Print两个工具按钮 4. 添加：添加多行完全工具栏组mfull，添加演示在demo01和demo02 5. 添加：对话框面板中的textarea表单项中按Ctrl+Enter自动调用确定按钮，目前仅影响“粘贴文本”按钮 6. 添加：非IE浏览器下对话框面板打开后在第一个可输入表单项设置焦点
1. 修正：会造成网页中非jquery的submit事件return false无效问题的修正
2. 修正：IE浏览器下从写字板粘贴内容会额外增加多余代码问题的修正
3. 修正：IE浏览器下段落标签无效问题的修正
4. 修正：IE浏览器下插入URL结尾带参数的FLASH和多媒体文件，会造成代码完全失效问题的修正
5. 修正：hr等自结束标签导致代码缩进格式化错误问题的修正
6. 修正：多次初始化编辑器，插件会被重复加载问题的修正
7. 修正：扩展的jQuery方法.val('test')不支持多dom批量写值问题的修正
8. 修正：IE6某些情况下打开按钮面板会造成界面闪动问题的修正
9. 修正：Firefox从全屏返回正常界面会导致当前页面滚动条置顶问题的修正
10.修正：shortcuts参数及addShortcuts函数定义的多个相同快捷键，最早定义才有效的问题修正，并允许在事件代码中return false来取消当前事件
11.修正：使用非强制P标签(BR模式)情况下，列表中无法用回车产生新列表项问题的修正
12.修正：IE浏览器下，菜单、颜色和表情由于代码编写不够完善，造成打开缓慢问题的修正
13.修正：无论是否开启内部代码，都会造成<script>标签丢失问题的修正
14.修正：XHTML格式化函数formatXHTML代码出错，造成某些非标准代码修复失败问题的修正

1. 调整：o2007blue和o2007silver两个皮肤鼠标悬停时样式进行了优化调整
2. 调整：添加js文件重复加载检测，以防止内核js文件被重复load
3. 调整：loadCSS参数支持加载<style></style>内部样式
4. 调整：系统内置Ajax上传添加*参数，不限制任何扩展名
5. 调整：UBB demo07中的高亮组件syntaxhighlighter由原先的2.1.364版更换成更为精简的1.5.1版，需要其它高亮组件请自行更换
6. 调整：批量插入分隔符由原先的制表符(\t)变更为半角空格( )
7. 调整：demos文件夹3个语言版本的upload.php、upload.asp和upload.aspx修改以支持HTML5上传
8. 调整：为遵守W3C标准及提高图片的搜索引擎友好性，UBB模块img标签在第一个参数位添加必填参数alt，例：[img=alt,100,100,center]a.gif[/img]或者[img=alt,center]a.gif[/img]，注：若希望升级至当前UBB版本，之前带参数的img标签，请自行批量转换

1. 取消：取消GStart和GEnd两个按钮，相应两个按钮会自动在相应位置添加
2. 取消：鉴于字数统计功能依赖的change事件会和其它插件产生严重的冲突问题，暂时取消此事件触发功能

--- a/xheditor_skin/vista/ui.css
+++ b/xheditor_skin/vista/ui.css
@@ -7,7 +7,7 @@
 
 .xhe_vista span.xheGStart{display:block;width:4px;height:22px;background:url(img/buttonbg.gif) -22px 0;}
 .xhe_vista span.xheGEnd{display:block;width:4px;height:22px;background:url(img/buttonbg.gif) -26px 0;}
-.xhe_vista span.xheSeparator{display:block;height:22px;width:4px;padding:0 2px}
+.xhe_vista span.xheSeparator{display:block;height:22px;width:4px;}
 
 .xhe_vista a.xheButton{display:block;padding:1px;width:20px;height:20px;border:0px;background:url(img/buttonbg.gif);cursor:pointer;}
 .xhe_vista a.xheButton span{opacity:0.3; -ms-filter:'alpha(opacity=30)'; filter:alpha(opacity=30);}
@@ -31,26 +31,28 @@
 .xhe_vista span.xheBtnStrikethrough {background-position:-200px 0}
 .xhe_vista span.xheBtnFontColor {background-position:-220px 0}
 .xhe_vista span.xheBtnBackColor {background-position:-240px 0}
-.xhe_vista span.xheBtnRemoveformat {background-position:-260px 0}
+.xhe_vista span.xheBtnSelectAll {background-position:-260px 0}
+.xhe_vista span.xheBtnRemoveformat {background-position:-280px 0}
 
-.xhe_vista span.xheBtnAlign {background-position:-280px 0}
-.xhe_vista span.xheBtnList {background-position:-300px 0}
-.xhe_vista span.xheBtnOutdent {background-position:-320px 0}
-.xhe_vista span.xheBtnIndent {background-position:-340px 0}
+.xhe_vista span.xheBtnAlign {background-position:-300px 0}
+.xhe_vista span.xheBtnList {background-position:-320px 0}
+.xhe_vista span.xheBtnOutdent {background-position:-340px 0}
+.xhe_vista span.xheBtnIndent {background-position:-360px 0}
 
-.xhe_vista span.xheBtnLink {background-position:-360px 0}
-.xhe_vista span.xheBtnUnlink {background-position:-380px 0}
-.xhe_vista span.xheBtnImg {background-position:-400px 0}
-.xhe_vista span.xheBtnFlash {background-position:-420px 0}
-.xhe_vista span.xheBtnMedia {background-position:-440px 0}
-.xhe_vista span.xheBtnEmot {background-position:-460px 0}
-.xhe_vista span.xheBtnTable {background-position:-480px 0}
+.xhe_vista span.xheBtnLink {background-position:-380px 0}
+.xhe_vista span.xheBtnUnlink {background-position:-400px 0}
+.xhe_vista span.xheBtnImg {background-position:-420px 0}
+.xhe_vista span.xheBtnFlash {background-position:-440px 0}
+.xhe_vista span.xheBtnMedia {background-position:-460px 0}
+.xhe_vista span.xheBtnEmot {background-position:-480px 0}
+.xhe_vista span.xheBtnTable {background-position:-500px 0}
 
-.xhe_vista span.xheBtnSource {background-position:-500px 0}
-.xhe_vista span.xheBtnPreview {background-position:-520px 0}
-.xhe_vista span.xheBtnFullscreen {background-position:-540px 0}
+.xhe_vista span.xheBtnSource {background-position:-520px 0}
+.xhe_vista span.xheBtnPreview {background-position:-540px 0}
+.xhe_vista span.xheBtnPrint {background-position:-560px 0}
+.xhe_vista span.xheBtnFullscreen {background-position:-580px 0}
 
-.xhe_vista span.xheBtnAbout {background-position:-560px 0}
+.xhe_vista span.xheBtnAbout {background-position:-600px 0}
 
 .xhe_vista .xheIframeArea{height:100%;}
 .xhe_vista iframe {display:block;background:#fff;width:100%;height:100%;}
@@ -87,13 +89,14 @@
 .xheDialog a:hover{text-decoration:underline;color:#00f}
 .xheDialog div{padding:2px 0px;}
 .xheDialog input{
-	border-width:1px;border-style:solid;font-size:12px;
+	margin:0;border-width:1px;border-style:solid;font-size:12px;
 	*padding:expression((type=="text")?'1px':'auto');*width:expression((type=="text")?'160px':'auto');*border-color:expression((type=="text")?'#ABADB3':'#fff #888 #888 #fff');*background:expression((type=="button")?'#F0F0F0':'#FFFFFF');*cursor:expression((type=="button")?'pointer':'');*font-size:expression((type=="button")?'13px':'12px');
 }
+.xheDialog textarea{font-size:12px;}
 .xheDialog input[type=text]{padding:1px;width:160px;border-color:#ABADB3;}
 .xheDialog input[type=button]{margin:0;border-color:#fff #888 #888 #fff;background:#F0F0F0;cursor:pointer;font-size:13px;}
 .xheDialog input[type=file]{font-size:13px;}
-.xheDialog select{border:1px #ABADB3 solid;}
+.xheDialog select{margin:0;border:1px #ABADB3 solid;}
 .xheDialog .xheUpload{position: relative;display:inline-block;width:164px;}
 .xheDialog .xheUpload .xheBtn{position: absolute;top: 0px;left: 114px;width:50px;z-index: 1000001;padding:0;}
 .xheDialog .xheUpload .xheFile{cursor:pointer;position: absolute;top: 0px;left: 0px;width:164px;opacity:0;-ms-filter:'alpha(opacity=0)';filter:alpha(opacity=0);z-index: 1000002;}
@@ -114,6 +117,10 @@
 	position: fixed;z-index:1000008;top: 0px;left: 0px;height:100%;width:100%;background-color:#000;opacity:0.2; -ms-filter:'alpha(opacity=20)'; filter:alpha(opacity=20);
 	*position:absolute;*height:expression(Math.max(document.documentElement.clientHeight,document.documentElement.scrollHeight)+'px');*width:expression(Math.max(document.documentElement.clientWidth,document.documentElement.scrollWidth)+'px');
 }
+
+.xheProgress{position:relative;width:280px;margin:auto;border:1px solid #C1C1C1;-moz-border-radius:3px;-webkit-border-radius:3px;border-radius:3px;background:url(img/progressbg.gif) #E9E9E9;}
+.xheProgress span{position:absolute;left:0;top:0;width:100%;text-align:center;line-height:15px;font-size:12px;color:#000;text-shadow: 1px 1px 0 #eee;}
+.xheProgress div{height:15px;width:1px;background:url(img/progress.gif) #31C135;}
 
 .xhe_Fullfix{overflow:hidden;}
 .xhe_Fullfix body{width:100%;height:100%;}
