--- a/xheditor_skin/default/ui.css
+++ b/xheditor_skin/default/ui.css
@@ -7,12 +7,12 @@
 
 .xhe_default span.xheGStart{display:none;}
 .xhe_default span.xheGEnd{display:none;}
-.xhe_default span.xheSeparator{display:block;height:22px;width:4px;margin:2px 2px !important;background:url(img/icons.gif) no-repeat -580px 0;}
+.xhe_default span.xheSeparator{display:block;height:22px;width:4px;margin:2px 2px !important;background:url(img/icons.gif) no-repeat -620px 0;}
 
 .xhe_default a.xheButton{display:block;margin:1px;border:0px; width:20px; height:20px;cursor:pointer;}
 .xhe_default a.xheButton span{opacity:0.3; -ms-filter:'alpha(opacity=30)'; filter:alpha(opacity=30);}
 .xhe_default a.xheEnabled span{opacity:1; -ms-filter:'alpha(opacity=100)'; filter:alpha(opacity=100);}
-.xhe_default a.xheEnabled:hover {margin:0px;border:1px solid #999; background:#fff;}
+.xhe_default a.xheEnabled:hover {margin:0px;border:1px solid #999;background:#fff;}
 .xhe_default a.xheActive{margin:0px;border:1px solid #999; background:#fff;}
 
 .xhe_default a.xheButton span{display:block;margin:0px;height:20px;width:20px;}
@@ -31,26 +31,28 @@
 .xhe_default span.xheBtnStrikethrough {background-position:-200px 0}
 .xhe_default span.xheBtnFontColor {background-position:-220px 0}
 .xhe_default span.xheBtnBackColor {background-position:-240px 0}
-.xhe_default span.xheBtnRemoveformat {background-position:-260px 0}
+.xhe_default span.xheBtnSelectAll {background-position:-260px 0}
+.xhe_default span.xheBtnRemoveformat {background-position:-280px 0}
 
-.xhe_default span.xheBtnAlign {background-position:-280px 0}
-.xhe_default span.xheBtnList {background-position:-300px 0}
-.xhe_default span.xheBtnOutdent {background-position:-320px 0}
-.xhe_default span.xheBtnIndent {background-position:-340px 0}
+.xhe_default span.xheBtnAlign {background-position:-300px 0}
+.xhe_default span.xheBtnList {background-position:-320px 0}
+.xhe_default span.xheBtnOutdent {background-position:-340px 0}
+.xhe_default span.xheBtnIndent {background-position:-360px 0}
 
-.xhe_default span.xheBtnLink {background-position:-360px 0}
-.xhe_default span.xheBtnUnlink {background-position:-380px 0}
-.xhe_default span.xheBtnImg {background-position:-400px 0}
-.xhe_default span.xheBtnFlash {background-position:-420px 0}
-.xhe_default span.xheBtnMedia {background-position:-440px 0}
-.xhe_default span.xheBtnEmot {background-position:-460px 0}
-.xhe_default span.xheBtnTable {background-position:-480px 0}
+.xhe_default span.xheBtnLink {background-position:-380px 0}
+.xhe_default span.xheBtnUnlink {background-position:-400px 0}
+.xhe_default span.xheBtnImg {background-position:-420px 0}
+.xhe_default span.xheBtnFlash {background-position:-440px 0}
+.xhe_default span.xheBtnMedia {background-position:-460px 0}
+.xhe_default span.xheBtnEmot {background-position:-480px 0}
+.xhe_default span.xheBtnTable {background-position:-500px 0}
 
-.xhe_default span.xheBtnSource {background-position:-500px 0}
-.xhe_default span.xheBtnPreview {background-position:-520px 0}
-.xhe_default span.xheBtnFullscreen {background-position:-540px 0}
+.xhe_default span.xheBtnSource {background-position:-520px 0}
+.xhe_default span.xheBtnPreview {background-position:-540px 0}
+.xhe_default span.xheBtnPrint {background-position:-560px 0}
+.xhe_default span.xheBtnFullscreen {background-position:-580px 0}
 
-.xhe_default span.xheBtnAbout {background-position:-560px 0}
+.xhe_default span.xheBtnAbout {background-position:-600px 0}
 
 .xhe_default .xheIframeArea{height:100%;}
 .xhe_default iframe {display:block;background:#fff;width:100%;height:100%;}
@@ -85,15 +87,16 @@
 .xheDialog{padding:10px;font-size:12px;font-family:monospace;}
 .xheDialog a{text-decoration:underline;color:#00f;}
 .xheDialog a:hover{text-decoration:underline;color:#00f}
-.xheDialog div{padding:2px 0px;}
+.xheDialog div{padding:2px 0;}
 .xheDialog input{
-	border-width:1px;border-style:solid;font-size:12px;
+	margin:0;border-width:1px;border-style:solid;font-size:12px;
 	*padding:expression((type=="text")?'1px':'auto');*width:expression((type=="text")?'160px':'auto');*border-color:expression((type=="text")?'#ABADB3':'#fff #888 #888 #fff');*background:expression((type=="button")?'#F0F0F0':'#FFFFFF');*cursor:expression((type=="button")?'pointer':'');*font-size:expression((type=="button")?'13px':'12px');
 }
+.xheDialog textarea{font-size:12px;}
 .xheDialog input[type=text]{padding:1px;width:160px;border-color:#ABADB3;}
 .xheDialog input[type=button]{margin:0;border-color:#fff #888 #888 #fff;background:#F0F0F0;cursor:pointer;font-size:13px;}
 .xheDialog input[type=file]{font-size:13px;}
-.xheDialog select{border:1px #ABADB3 solid;}
+.xheDialog select{margin:0;border:1px #ABADB3 solid;}
 .xheDialog .xheUpload{position: relative;display:inline-block;width:164px;}
 .xheDialog .xheUpload .xheBtn{position: absolute;top: 0px;left: 114px;width:50px;z-index: 1000001;padding:0;}
 .xheDialog .xheUpload .xheFile{cursor:pointer;position: absolute;top: 0px;left: 0px;width:164px;opacity:0;-ms-filter:'alpha(opacity=0)';filter:alpha(opacity=0);z-index: 1000002;}
@@ -114,6 +117,10 @@
 	position: fixed;z-index:1000008;top: 0px;left: 0px;height:100%;width:100%;background-color:#000;opacity:0.2; -ms-filter:'alpha(opacity=20)'; filter:alpha(opacity=20);
 	*position:absolute;*height:expression(Math.max(document.documentElement.clientHeight,document.documentElement.scrollHeight)+'px');*width:expression(Math.max(document.documentElement.clientWidth,document.documentElement.scrollWidth)+'px');
 }
+
+.xheProgress{position:relative;width:280px;margin:auto;border:1px solid #C1C1C1;-moz-border-radius:3px;-webkit-border-radius:3px;border-radius:3px;background:url(img/progressbg.gif) #E9E9E9;}
+.xheProgress span{position:absolute;left:0;top:0;width:100%;text-align:center;line-height:15px;font-size:12px;color:#222;text-shadow: 1px 1px 0 #eee;}
+.xheProgress div{height:15px;width:1px;background:url(img/progress.gif) #31C135;}
 
 .xhe_Fullfix{overflow:hidden;}
 .xhe_Fullfix body{width:100%;height:100%;}
