--- a/xheditor_skin/vista/iframe.css
+++ b/xheditor_skin/vista/iframe.css
@@ -3,6 +3,7 @@ body,td,th{font-family:Arial,Verdana,sans-serif;font-size: 12px;}
 body{background-color: #FFFFFF;word-break:break-word;word-wrap:break-word;white-space:-moz-pre-wrap;white-space:-hp-pre-wrap;white-space:-o-pre-wrap;white-space:-pre-wrap;white-space:pre;white-space:pre-wrap;white-space:pre-line;}
 
 .editMode{margin:5px;padding:0px;overflow-y:auto;}
+.editMode img:-moz-broken {-moz-force-broken-image-icon:1;height:24px;width:24px;}
 .editMode table:not([border]){border-collapse:collapse;border:1px dotted #d3d3d3;}
 .editMode table:not([border]) th,.editMode table:not([border]) td{border:1px dotted #d3d3d3;}
 .editMode embed{display:inline-block;border:1px dashed #FF4E4E;}
