ver 1.1.2 (2010-12-1) 1. 修正：IE6浏览器在鼠标没点击编辑区域的情况下点击源代码出错问题的修正 2. 修正：源代码光标定位功能在某些情况下会产生空白行问题的修正 3. 修正：IE6,7浏览器下编辑器高度设置过高会导致上下漏灰问题的修正 4. 修正：IE浏览器下在showModalDialog打开的窗口中无法正常初始编辑器问题的修正 5. 修正：IE浏览器下若开启urlType参数，生成的URL根路径会出现丢失“/”符号问题的修正 6. 修正：不兼容jQuery 1.4.3,1.4.4问题的修正 7. 修正：某些Word文档粘贴后会多出很多换行问题的修正 8. 修正：forcePasteText参数开启情况下，粘贴“<p>ffff”类似文本会被转HTML代码问题的修正 9. 修正：开启urlType参数情况下，“mailto:”、“file:”和“ftp:”等协议的URL地址会被错误转换问题的修正 10.修正：IE浏览器下选择图片的情况下，粘贴会产生JS错误问题的修正 11.修正：IE浏览器环境下，初始化时会删除&符号后面全部代码问题的修正 12.修正：Chrome浏览器按回车键没有输出<br/>问题的修正 13.修正：Firefox浏览器下从其它网页复制文本，其中文本会在超长处被强制加br问题的修正
1. 调整：为提高兼容性，Word自动检测并清理功能改为只在用户粘贴时执行
2. 调整：优化内核正则表达式，提高代码的清理和格式化的执行效率

--- a/xheditor_skin/default/iframe.css
+++ b/xheditor_skin/default/iframe.css
@@ -1,6 +1,6 @@
 html{height:100%;}
 body,td,th{font-family:Arial,Verdana,sans-serif;font-size: 12px;}
-body{background-color: #FFFFFF;word-break:break-word;word-wrap:break-word;white-space:-moz-pre-wrap;white-space:-hp-pre-wrap;white-space:-o-pre-wrap;white-space:-pre-wrap;white-space:pre;white-space:pre-wrap;white-space:pre-line;}
+body{background-color: #FFFFFF;word-break:break-word;word-wrap:break-word;}
 
 .editMode{margin:5px;padding:0px;overflow-y:auto;}
 .editMode img:-moz-broken {-moz-force-broken-image-icon:1;height:24px;width:24px;}
