ver 1.1.3 (2011-1-1) 1. 调整：取消删除线的快捷键：Ctrl+S
1. 修正：IE浏览器下无边框的table没有显示辅助的虚线边框问题的修正
2. 修正：IE浏览器下光标定位在编辑器中，xheditor(false)卸载编辑器会造成当前页面光标被锁死问题的修正
3. 修正：&reg;和&copy;被浏览器强制转为字符问题的修正
4. 修正：从其它网站复制粘贴WORD文档和普通HTML混合的内容时，会导致图片丢失问题的修正
5. 修正：urlType参数开启情况下，mailto:地址被转绝对地址问题的进一步修正
6. 修正：Flash和视频不支持输入百分比数值问题的修正

1. 优化：优化Word自动文档清理功能，进一步提高代码处理效率并且兼容Excel文档粘贴
2. 优化：优化formatXHTML函数，极大提高代码格式化效率

--- a/xheditor_skin/default/iframe.css
+++ b/xheditor_skin/default/iframe.css
@@ -4,8 +4,7 @@ body{background-color: #FFFFFF;word-break:break-word;word-wrap:break-word;}
 
 .editMode{margin:5px;padding:0px;overflow-y:auto;}
 .editMode img:-moz-broken {-moz-force-broken-image-icon:1;height:24px;width:24px;}
-.editMode table:not([border]){border-collapse:collapse;border:1px dotted #d3d3d3;}
-.editMode table:not([border]) th,.editMode table:not([border]) td{border:1px dotted #d3d3d3;}
+.editMode table.xhe-border,.editMode table.xhe-border th,.editMode table.xhe-border td{border:1px dotted #d3d3d3;}
 .editMode embed{display:inline-block;border:1px dashed #FF4E4E;}
 .editMode embed[type="application/x-shockwave-flash"]{background:url(img/flash.gif) center center no-repeat;}
 .editMode embed[type="application/x-mplayer2"]{background:url(img/wmp.gif) center center no-repeat;}
