ver 1.1.8 (2011-7-7) 1. 添加：添加非本域名图片远程抓取功能(全浏览器兼容) 2. 添加：添加剪切板图片粘贴上传功能(只支持Firefox 4,5 Chrome 10,11,12) 3. 添加：添加demo12演示(远程抓图&剪切板粘贴上传) 4. 添加：内核添加锚点功能模块 5. 添加：内核添加hr水平线功能模块 6. 添加：添加onPaste回调参数，可在初始化时赋值，用来过滤用户粘贴代码，回调中返回false取消粘贴
1. 修正：针对<div id="test"style="color:#ccc;">这种非标准代码不兼容问题的修正
2. 修正：UBB模式下size标签丢失问题的修正
3. 修正：在IE8下的IE7兼容模式下，模式窗口无法在当前窗口居中问题的修正
4. 修正：插入表格设置高度无效问题的修正
5. 修正：Chrome浏览器中粘贴某些带特殊style属性的代码，无法粘贴问题的修正
6. 修正：IE8浏览器下无法粘贴问题的修正
7. 修正：从Word粘贴到编辑器，出现锚点丢失问题的修正

1. 调整：google地图调整为API v3版，使用更流畅，且无需申请KEY
2. 调整：当textarea处在隐藏状态，进行初始化操作会提示无法初始化，调整为不提示并设置默认高度150像素

--- a/xheditor_skin/vista/ui.css
+++ b/xheditor_skin/vista/ui.css
@@ -41,18 +41,20 @@
 
 .xhe_vista span.xheBtnLink {background-position:-380px 0}
 .xhe_vista span.xheBtnUnlink {background-position:-400px 0}
-.xhe_vista span.xheBtnImg {background-position:-420px 0}
-.xhe_vista span.xheBtnFlash {background-position:-440px 0}
-.xhe_vista span.xheBtnMedia {background-position:-460px 0}
-.xhe_vista span.xheBtnEmot {background-position:-480px 0}
-.xhe_vista span.xheBtnTable {background-position:-500px 0}
+.xhe_vista span.xheBtnAnchor {background-position:-420px 0}
+.xhe_vista span.xheBtnImg {background-position:-440px 0}
+.xhe_vista span.xheBtnFlash {background-position:-460px 0}
+.xhe_vista span.xheBtnMedia {background-position:-480px 0}
+.xhe_vista span.xheBtnHr {background-position:-500px 0}
+.xhe_vista span.xheBtnEmot {background-position:-520px 0}
+.xhe_vista span.xheBtnTable {background-position:-540px 0}
 
-.xhe_vista span.xheBtnSource {background-position:-520px 0}
-.xhe_vista span.xheBtnPreview {background-position:-540px 0}
-.xhe_vista span.xheBtnPrint {background-position:-560px 0}
-.xhe_vista span.xheBtnFullscreen {background-position:-580px 0}
+.xhe_vista span.xheBtnSource {background-position:-560px 0}
+.xhe_vista span.xheBtnPreview {background-position:-580px 0}
+.xhe_vista span.xheBtnPrint {background-position:-600px 0}
+.xhe_vista span.xheBtnFullscreen {background-position:-620px 0}
 
-.xhe_vista span.xheBtnAbout {background-position:-600px 0}
+.xhe_vista span.xheBtnAbout {background-position:-640px 0}
 
 .xhe_vista .xheIframeArea{height:100%;}
 .xhe_vista iframe {display:block;background:#fff;width:100%;height:100%;}
@@ -105,18 +107,22 @@
 
 .xheModal{
 	position: fixed;z-index: 1000010;text-align:left;top:50%;left:50%;background:#FFF;border:1px solid #99BBE8;font-size:12px;
-	*position:absolute;*margin-top:expression(0 - parseInt(this.offsetHeight / 2) + (TBWindowMargin = document.documentElement && document.documentElement.scrollTop || document.body.scrollTop) + 'px');
+	_position:absolute;_margin-top:expression(0 - parseInt(this.offsetHeight / 2) + (TBWindowMargin = document.documentElement && document.documentElement.scrollTop || document.body.scrollTop) + 'px');
 }
 .xheModalTitle{padding:3px;line-height:18px;background:url(img/titlebg.gif) repeat-x;border-bottom:1px solid #99BBE8;}
 .xheModalClose{float:right;width:30px;height:18px;background:url(img/close.gif);cursor:pointer;}
 .xheModalIfmWait{width:100%;height:100%;background:url(img/waiting.gif) no-repeat 50% 50%;margin:-16 0 0 -16;}
 .xheModalShadow{
 	position:fixed;z-index:1000009;top:50%;left:50%;background:#000;opacity:0.2; -ms-filter:'alpha(opacity=20)'; filter:alpha(opacity=20);
-	*position:absolute;*margin-top:expression(0 - parseInt(this.offsetHeight / 2) + (TBWindowMargin = document.documentElement && document.documentElement.scrollTop || document.body.scrollTop) + 5 + 'px');
+	_position:absolute;_margin-top:expression(0 - parseInt(this.offsetHeight / 2) + (TBWindowMargin = document.documentElement && document.documentElement.scrollTop || document.body.scrollTop) + 5 + 'px');
 }
 .xheModalOverlay{
 	position: fixed;z-index:1000008;top: 0px;left: 0px;height:100%;width:100%;background-color:#000;opacity:0.2; -ms-filter:'alpha(opacity=20)'; filter:alpha(opacity=20);
-	*position:absolute;*height:expression(Math.max(document.documentElement.clientHeight,document.documentElement.scrollHeight)+'px');*width:expression(Math.max(document.documentElement.clientWidth,document.documentElement.scrollWidth)+'px');
+	_position:absolute;_height:expression(Math.max(document.documentElement.clientHeight,document.documentElement.scrollHeight)+'px');_width:expression(Math.max(document.documentElement.clientWidth,document.documentElement.scrollWidth)+'px');
+}
+*html{
+	background-image:url(about:blank);
+	background-attachment:fixed;
 }
 
 .xheProgress{position:relative;width:280px;margin:auto;border:1px solid #C1C1C1;-moz-border-radius:3px;-webkit-border-radius:3px;border-radius:3px;background:url(img/progressbg.gif) #E9E9E9;}
@@ -127,7 +133,7 @@
 .xhe_Fullfix body{width:100%;height:100%;}
 .xhe_Fullscreen{
 	top:0px;left:0px;position:fixed;z-index:100000;width:100%;height:100%;background:#fff;
-	*position:absolute;*top:expression((document.compatMode?documentElement.scrollTop:document.body.scrollTop)+'px');*width:expression((document.compatMode?documentElement.offsetWidth:document.body.offsetWidth) + 'px');*height:expression((document.compatMode?documentElement.offsetHeight:document.body.offsetHeight) + 'px');
+	_position:absolute;_top:expression((document.compatMode?documentElement.scrollTop:document.body.scrollTop)+'px');_width:expression((document.compatMode?documentElement.offsetWidth:document.body.offsetWidth) + 'px');_height:expression((document.compatMode?documentElement.offsetHeight:document.body.offsetHeight) + 'px');
 }
 
 .xheHideArea{position:absolute;top:-1000px;left:-1000px;visibility:hidden;}
