--- a/xheditor_skin/nostyle/iframe.css
+++ b/xheditor_skin/nostyle/iframe.css
@@ -9,6 +9,7 @@ body{background-color: #FFFFFF;word-break:break-word;word-wrap:break-word;}
 .editMode embed[type="application/x-shockwave-flash"]{background:url(img/flash.gif) center center no-repeat;}
 .editMode embed[type="application/x-mplayer2"]{background:url(img/wmp.gif) center center no-repeat;}
 .editMode .xhe-paste{position:absolute;left:-1000px;overflow:hidden;width:1px;height:1px;}
+.editMode .xhe-anchor{display:inline-block;background: url(img/anchor.gif) no-repeat;border: 1px dotted #0000FF;width:16px;height:15px;text-indent:-9999px;overflow:hidden;}
 
 .sourceMode{margin:0px;padding:0px;overflow:hidden;height:100%;}
 .sourceMode textarea{border:0px;margin:0px;padding:0px;width:100%;height:100%;overflow-y:auto;font-family:'Courier New',Courier,monospace !important;font-size:10pt;}
