ver 1.1.9 (2011-8-3) 1. 添加：添加盲人无障碍访问支持：全键盘操作，全程语音向导 2. 添加：添加readTip参数，盲人初次编辑时会听到此文字提示，可用来提示快捷键等信息 3. 添加：当页面有锚点时，插入链接自动提供列表选项供选择 4. 添加：ubb模式添加hr水平线标签支持
1. 修正：IE6,IE7浏览器下，锚点在hr标签后面无法正常显示问题的修正
2. 修正：php版远程抓图saveremoteimg.php添加文件mime检查功能，以防止抓取一些非图片文件
3. 修正：带name属性的普通超链接被显示为锚点问题的修正
4. 修正：缩进功能错误的绑定tab按键，导致盲人无法正常浏览网页问题的修正
5. 修正：embed标签被错误的当成块标签处理问题的修正
6. 修正：在Opera 11.50版本中无法上传问题的修正
7. 修正：Firefox下，当页面头部是script或者style，出现无法切换源代码问题的修正
8. 修正：某些script代码会丢失问题的修正

1. 调整：大部分操作系统中不存在Arial Narrow字体，因此从字体列表中删除
2. 调整：触摸屏移动浏览器由于不支持所见即所得，不初始化编辑器，以保留传统文本框编辑功能

--- a/demos/common.css
+++ b/demos/common.css
@@ -17,11 +17,10 @@ form{
 	background:#F4F4F4;
 	border-bottom:1px solid #999;
 	line-height:normal;
+	_position: absolute;
+	_top: expression(eval(TBWindowMargin = document.documentElement && document.documentElement.scrollTop || document.body.scrollTop));
 }
-* html #header-nav { /* ie6 hack */
-position: absolute !important;
-margin-top: expression((TBWindowMargin = document.documentElement && document.documentElement.scrollTop || document.body.scrollTop) + 'px');
-}
+*html{background:url(about:blank) fixed;}
 #header-nav ul{
 	margin:0;
 	padding:10px 5px 0 12px;
