--- a/xheditor_skin/vista/ui.css
+++ b/xheditor_skin/vista/ui.css
@@ -9,13 +9,13 @@
 .xhe_vista span.xheGEnd{display:block;width:4px;height:22px;background:url(img/buttonbg.gif) -26px 0;}
 .xhe_vista span.xheSeparator{display:block;height:22px;width:4px;}
 
-.xhe_vista a.xheButton{display:inline-block;padding:1px;border:0px;background:url(img/buttonbg.gif);cursor:pointer;}
+.xhe_vista a.xheButton{display:inline-block;padding:1px;border:0px;background:url(img/buttonbg.gif);cursor:pointer;text-decoration:none;}
 .xhe_vista a.xheButton span{opacity:0.3; -ms-filter:'alpha(opacity=30)'; filter:alpha(opacity=30);}
 .xhe_vista a.xheEnabled span{opacity:1; -ms-filter:'alpha(opacity=100)'; filter:alpha(opacity=100);}
 .xhe_vista a.xheEnabled:hover {background-color:#B2BBD0; background-position:0 -22px}
 .xhe_vista a.xheActive{background-color:#B2BBD0; background-position:0 -44px !important;}
 
-.xhe_vista a.xheButton span{display:block;margin:0px;height:20px;width:20px;}
+.xhe_vista a.xheButton span{display:block;margin:0px;height:20px;width:20px;overflow:hidden;}
 .xhe_vista span.xheIcon{background:url(img/icons.gif) no-repeat 20px 20px}
 
 .xhe_vista span.xheBtnCut {background-position:0 0}
