ver 1.1.11 (2011-11-1) 1. 添加：添加Adobe Air平台的兼容支持
1. 修正：IE8,IE9浏览器下从其它网页复制粘贴到编辑器，出现图片等外部资源是相对路径问题的修正，修正后正常转为绝对路径
2. 修正：某些国内webkit内核的马甲浏览器无法打开iframe模式窗口的修正
3. 修正：非标准注释代码被强制转义问题的修正，例：<!--[if lte IE 6]><![endif]-->
4. 修正：HTML5上传模式不兼容Firefox 7问题的修正
5. 修正：WebKit内核浏览器下按钮无法自动换行问题的修正
6. 修正：UBB模块quote引用功能不支持嵌套问题的修正
7. 修正：当内容为空，IE浏览器下必需点击第一行才能设置光标焦点问题的修正
8. 修正：HTML5上传模式下，当文件名为中文时，在某些浏览器下会造成无法在服务器端获取原始文件名问题的修正
9. 修正：urlType网址转换模式下，base64编码的图片文件会被错误转换问题的修正

--- a/xheditor_skin/o2007blue/ui.css
+++ b/xheditor_skin/o2007blue/ui.css
@@ -1,4 +1,4 @@
-.xhe_o2007blue table, .xhe_o2007blue tr, .xhe_o2007blue td, .xhe_o2007blue iframe {border:0; margin:0; padding:0; background:transparent; white-space:nowrap; text-decoration:none; font-weight:normal; color:#000}
+.xhe_o2007blue table, .xhe_o2007blue tr, .xhe_o2007blue td, .xhe_o2007blue iframe {border:0; margin:0; padding:0; background:transparent;text-decoration:none; font-weight:normal; color:#000}
 
 .xhe_o2007blue table.xheLayout {display:inline-table;background:#E5EFFD; border:1px solid #ABC6DD;width:100%;height:100%;}
 .xhe_o2007blue td.xheTool {padding:1px 3px;border-bottom:1px solid #ABC6DD;}
