--- a/xheditor_skin/default/ui.css
+++ b/xheditor_skin/default/ui.css
@@ -1,4 +1,4 @@
-.xhe_default table, .xhe_default tr, .xhe_default td, .xhe_default iframe {border:0; margin:0; padding:0; background:transparent; white-space:nowrap; text-decoration:none; font-weight:normal; color:#000}
+.xhe_default table, .xhe_default tr, .xhe_default td, .xhe_default iframe {border:0; margin:0; padding:0; background:transparent;text-decoration:none; font-weight:normal; color:#000}
 
 .xhe_default table.xheLayout {display:inline-table;background:#F0F0EE; border:1px solid #C5C5C5;width:100%;height:100%;}
 .xhe_default td.xheTool{padding:0px 3px;border-bottom:1px solid #C5C5C5;}
