--- a/xheditor_skin/nostyle/ui.css
+++ b/xheditor_skin/nostyle/ui.css
@@ -1,4 +1,4 @@
-.xhe_nostyle table, .xhe_nostyle tr, .xhe_nostyle td, .xhe_nostyle iframe {border:0; margin:0; padding:0; background:transparent; white-space:nowrap; text-decoration:none; font-weight:normal; color:#000}
+.xhe_nostyle table, .xhe_nostyle tr, .xhe_nostyle td, .xhe_nostyle iframe {border:0; margin:0; padding:0; background:transparent;text-decoration:none; font-weight:normal; color:#000}
 
 .xhe_nostyle table.xheLayout {display:inline-table;background:#FFF; border:1px solid #C5C5C5;width:100%;height:100%;}
 .xhe_nostyle td.xheTool{padding:0px 3px;border-bottom:1px solid #C5C5C5;}
