--- a/xheditor_skin/o2007silver/ui.css
+++ b/xheditor_skin/o2007silver/ui.css
@@ -1,4 +1,4 @@
-.xhe_o2007silver table, .xhe_o2007silver tr, .xhe_o2007silver td, .xhe_o2007silver iframe {border:0; margin:0; padding:0; background:transparent; white-space:nowrap; text-decoration:none; font-weight:normal; color:#000}
+.xhe_o2007silver table, .xhe_o2007silver tr, .xhe_o2007silver td, .xhe_o2007silver iframe {border:0; margin:0; padding:0; background:transparent;text-decoration:none; font-weight:normal; color:#000}
 
 .xhe_o2007silver table.xheLayout {display:inline-table;background:#EEEEEE; border:1px solid #BBBBBB;width:100%;height:100%;}
 .xhe_o2007silver td.xheTool {padding:1px 3px;border-bottom:1px solid #BBBBBB;}
