ver 1.1.13 (2012-3-4) 1. 修正：jQuery 1.6,1.7且在IE6浏览器下上传图片出现width="auto"问题的修正 2. 修正：xhEditor操作界面被某些dialog组件覆盖问题的修正 3. 修正：span标签上某些属性丢失问题的修正 4. 修正：Opera 11下无法上传问题的修正 5. 修正：webkit内核下span某些时候style样式会丢失问题的修正 6. 修正：UBB插件在某些特殊代码情况下会输出undefined问题的修正
1. 调整：Word粘贴内容样式保留字体颜色和字体背景色，且默认改为简单清理
2. 调整：开放IOS5浏览器的富文本支持

--- a/xheditor_skin/vista/ui.css
+++ b/xheditor_skin/vista/ui.css
@@ -65,6 +65,7 @@
 .xheFixCancel{position:absolute;z-index:999998;background-color:#FFF;opacity:0; -ms-filter:'alpha(opacity=0)'; filter:alpha(opacity=0);}
 
 .xheMenu{padding:2px;overflow-x:hidden;overflow-y:auto;max-height:230px;}
+.xheMenu .xheMenuSeparator{margin:3px 0;border-top:1px solid #D8D8D8;}
 .xheMenu a{display:block;padding:3px 20px 3px 3px;line-height:normal;font-size:12px;color:#000;text-decoration:none;white-space:nowrap;}
 .xheMenu a:hover{background:#B8CFEE;text-decoration:none;color:#000;}
 .xheMenu p,.xheMenu h1,.xheMenu h2,.xheMenu h3,.xheMenu h4,.xheMenu h5,.xheMenu h6,.xheMenu pre,.xheMenu address,.xheMenu div{margin:0}
