--- a/xheditor_skin/default/iframe.css
+++ b/xheditor_skin/default/iframe.css
@@ -12,7 +12,7 @@ body{height:100%;-moz-box-sizing:border-box;-webkit-box-sizing:border-box;box-si
 .editMode .xhe-anchor{display:inline-block;background: url(img/anchor.gif) no-repeat;border: 1px dotted #0000FF;width:16px;height:15px;overflow:hidden;}
 
 .sourceMode{margin:0px;padding:0px;overflow:hidden;height:100%;}
-.sourceMode textarea{*position:absolute;border:0px;margin:0px;padding:0px;width:100%;height:100%;overflow-y:auto;font-family:'Courier New',Courier,monospace !important;font-size:10pt;resize:none;}
+.sourceMode textarea{*position:absolute;border:0px;margin:0px;padding:0px;width:100%;height:100%;overflow-y:auto;font-family:'Courier New',Courier,monospace !important;font-size:10pt;resize:none;outline:0;}
 
 .previewMode{margin:5px;padding:0px;}
 
